<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="cse535.mobilecomputing.spring2018.group3.MainActivity">

    <Space
        android:id="@+id/spaceTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CollectDataBtn"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/collect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceTop"
        app:layout_constraintEnd_toStartOf="@+id/spaceMid"/>

    <Button
        android:id="@+id/ClearDataBtn"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceTop"
        app:layout_constraintStart_toEndOf="@+id/spaceMid"/>

    <Button
        android:id="@+id/ClassifyBtn"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/classify"
        app:layout_constraintEnd_toStartOf="@+id/spaceMid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CollectDataBtn" />

    <Button
        android:id="@+id/PredictBtn"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/predict"
        app:layout_constraintStart_toEndOf="@+id/spaceMid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClearDataBtn" />

    <Button
        android:id="@+id/GraphPlotBtn"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_green_dark"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/graphPlot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PredictBtn" />

    <Space
        android:id="@+id/spaceMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
